[gd_scene load_steps=9 format=3 uid="uid://d1s24qc6e3ij7"]

[ext_resource type="Texture2D" uid="uid://cerixdpaxigs7" path="res://textures/hatty_logo_with_text.png" id="1_76a70"]
[ext_resource type="Script" path="res://scenes/splash_screen.gd" id="1_f5bkc"]
[ext_resource type="FontFile" uid="uid://cxco3lwv0bs5r" path="res://scenes/joystix monospace.otf" id="2_1ms2g"]
[ext_resource type="AudioStream" uid="uid://c7ybnstph2xlt" path="res://music/hatty_64.mp3" id="4_8qb61"]
[ext_resource type="Texture2D" uid="uid://ynk02or3vx1" path="res://icon.svg" id="5_ewyf3"]

[sub_resource type="Animation" id="Animation_gfmk0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_vh7dp"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gugv7"]
_data = {
"RESET": SubResource("Animation_gfmk0"),
"fade_out": SubResource("Animation_vh7dp")
}

[node name="splash_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f5bkc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="hatty_logo" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 342.0
offset_top = 82.0
offset_right = 342.0
offset_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.636965, 0.636965)
texture = ExtResource("1_76a70")
stretch_mode = 5

[node name="made_with" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 769.0
offset_top = 207.0
offset_right = 1153.0
offset_bottom = 282.0
theme_override_fonts/normal_font = ExtResource("2_1ms2g")
theme_override_font_sizes/normal_font_size = 50
text = "Made with"

[node name="godot" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 608.0
offset_top = 318.0
offset_right = 608.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.363677, 0.363677)
texture = ExtResource("5_ewyf3")
stretch_mode = 5

[node name="godot_engine" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 737.0
offset_right = 1496.0
offset_bottom = 880.0
theme_override_colors/default_color = Color(0.476841, 0.644696, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_1ms2g")
theme_override_font_sizes/normal_font_size = 100
text = "Godot engine"

[node name="made_by" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 799.0
offset_top = 162.0
offset_right = 1100.0
offset_bottom = 243.0
theme_override_fonts/normal_font = ExtResource("2_1ms2g")
theme_override_font_sizes/normal_font_size = 50
text = "Made by"

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2"]
libraries = {
"": SubResource("AnimationLibrary_gugv7")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8qb61")
